static/styles.css
body {
    width: 100%;
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    min-height: 100%;
    background-color: #e6e6e6;
}

nav {
    background-color: #FFD700;
    margin: 0;
    padding: 1em 0;
}

nav > ul {
    margin: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    list-style: none;
    font-weight:700;
}

nav a {
    color: #000000;
    text-decoration: none;
    transition: text-shadow 1s ease;
}

nav a:hover {
    color: white;
    text-shadow: 0 0 20px rgb(104, 72, 2);
}

nav > ul > li {
    margin: 0 .7em;   
}

#content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1 {
    font-family: monospace, sans-serif;
    font-size: 5em;
    margin: .5em 0 0 0;
}

textarea {
    width: 30em;
    height: 10em;
    margin: 1em 0 0 0;
    padding: .5em;
    resize: none;
}

form {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.text-container {
    width: 70%;
    max-width: 40em;
    margin-bottom: 1em;
}

.message-div {
    margin: 1em 0;
    max-width: 40em;
    text-align: justify;
}

#copy-btn {
    margin-top: 1em;
    display: inline-block;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    background-color: #5f5f5f;
    color: #FFFFFF;
    font-family: Arial, sans-serif;
    font-size: 16px;
    font-weight: bold;
    text-decoration: none;
    text-align: center;
    cursor: pointer;
    transition: background-color .5s ease-in-out;
    transition: color .5s ease-in-out;
    width: 20em;
}

#copy-btn:hover {
    background-color: #E6C800;
    color: #fffcc7;
}

#copy-btn:active {
    background-color: #b39d13;
  }

.external-link {
    text-decoration: none;
    color: #5f5f5f;
    font-weight: bold;
  }

.external-link:hover {
    color: #b39d13;
}

.interactive-learn-el {
    border: 1px solid black;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 1em;
    background-color: lightgray;
}

.interactive-learn-el h4 {
    margin: 0;
}

.interactive-learn-el button {
    margin-top: .5em;
    cursor: pointer;
    padding: .5em 1em;
    font-weight: bold;
}

.interactive-learn-el input {
    width: 1em;
    padding: 1em;
    font-size: large;
    font-weight: bold;
    text-align: center;
    margin: .5em 0;
}

.error-message {
    color:#b30303;
    font-weight: bold;
}

.output-btn {
    margin-top: 1em;
    display: inline-block;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    background-color: #E6C800;
    color: #FFFFFF;
    font-family: Arial, sans-serif;
    font-size: 16px;
    font-weight: bold;
    text-decoration: none;
    text-align: center;
    cursor: pointer;
    transition: background-color 0.5s ease-in-out;
    width: 20em;
    text-shadow: 0 0 10px gray;
}

.output-btn:hover {
    background-color: #968702;
}

.output-btn:active {
    background-color: #807700;
}

#output-option-div {
    background-color: #d3d3d3;
    width: 20em;
    padding: .5em 0;
    border-radius: 5px;
    margin-top: 1em;
    display: flex;
    justify-content: space-around;
}

#bulbs, #nums {
    cursor: pointer;
}

#message-header {
    margin: 1em 0 0 0;
}

#char-used-div {
    font-size: small;
    margin: 0;
}

@media (max-width: 780px) {

    h1 {
        font-size: 3.8em;
    }

    .sub-text {
        max-width: 70%;
    }

    .message-div {
        max-width: 70%;
    }
}

@media (max-width: 600px) {

    nav > ul {
        flex-direction: column;
    }

    nav > ul > li {
        margin: .2em 0;
    }

    h1 {
        font-size: 3em;
    }

}

@media (max-width: 470px) {
    h1 {
        font-size: 2.1em;
    }

    textarea {
        max-width: 300px;
        height: 20em;
    }

    ul {
        padding-right: 2em;
    }
}

@media (max-width: 320px) {
    h1 {
        font-size: 1.5em;
    }

    h2 {
        width: 80%;
    }

    textarea {
        max-width: 200px;
    }

    button {
        max-width: 200px;
    }

}

